@startuml
'https://plantuml.com/class-diagram

interface EnemyFactory
{
    + createEnemy():AbstractEnemyAircraft
}

class MobEnemyFactory
{
    + createEnemy():EnemyAircraft
}

class EliteEnemyFactory
{
    + createEnemy():EnemyAircraft
}

class BossEnemyFactory
{
    + createEnemy():EnemyAircraft
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<Bullet>
}

class EliteEnemy{
    - power:int

    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + dropProp()
}

class BossEnemy{
    - power:int

    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + dropProp()
}

abstract class AbstractEnemyAircraft{
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<Bullet>
}

AbstractEnemyAircraft<|--EliteEnemy
AbstractEnemyAircraft<|--BossEnemy
AbstractEnemyAircraft<|--MobEnemy

EnemyFactory<|..MobEnemyFactory
EnemyFactory<|..EliteEnemyFactory
EnemyFactory<|..BossEnemyFactory

MobEnemyFactory..>MobEnemy
EliteEnemyFactory..>EliteEnemy
BossEnemyFactory..>BossEnemy

@enduml